Use macAddress as id for all remaining routes
