# apps/elgato/backend/src/modules/stream-deck/stream-deck.controller.ts
@@ -6,8 +6,8 @@ import { DeviceService } from '../device/device.service'
 export class StreamDeckController {
   constructor(private readonly deviceService: DeviceService) {}
 
-  @Get('/toggle/:deviceId')
-  async toggleDevice(@Param('deviceId') deviceId: string) {
-    await this.deviceService.toggle(deviceId)
+  @Get('/toggle/:macAddress')
+  async toggleDevice(@Param('macAddress') macAddress: string) {
+    await this.deviceService.toggle(macAddress)
   }
 }
